--- a/admin/Server/appsettings.json
+++ b/admin/Server/appsettings.json
@@ -15,5 +15,11 @@
       }
     }
   },
+  "Cors":{
+    "Origins": [
+      "http://localhost:4200",
+      "https://localhost:7090"
+    ]
+  },
   "AllowedHosts": "*"
 }
